--- a/templates/chat.html
+++ b/templates/chat.html
@@ -21,7 +21,7 @@
         </form>
     </div>
     <button class="arrow-down-button">↓</button>
-    <a href="{{ url_for('index') }}">Back to Chats</a>
+    <a href="{{ url_for('index') }}">Вернуться к чатам</a>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.0/socket.io.js"></script>
     <script>
