--- a/templates/login.html
+++ b/templates/login.html
@@ -12,9 +12,9 @@
         <form action="{{ url_for('login') }}" method="post">
             <input type="text" name="username" placeholder="Username" required>
             <input type="password" name="password" placeholder="Password" required>
-            <button type="submit">Login</button>
+            <button type="submit">Войти</button>
         </form>
-        <a href="{{ url_for('register') }}">Don't have an account? Register</a>
+        <a href="{{ url_for('register') }}">Нет аккаунта? Зарегестрируйтесь</a>
     </div>
 </body>
 </html>
