--- a/templates/register.html
+++ b/templates/register.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <div class="auth-container">
-        <h2>Register</h2>
+        <h2>Регистрация</h2>
         <form action="{{ url_for('register') }}" method="post">
             <input type="text" name="username" placeholder="Username" required>
             <input type="password" name="password" placeholder="Password" required>
-            <button type="submit">Register</button>
+            <button type="submit">Зарегестрироваться</button>
         </form>
-        <a href="{{ url_for('login') }}">Already have an account? Login</a>
+        <a href="{{ url_for('login') }}">Уже есть аккаунт? Зарегестрируйтесь.</a>
     </div>
 </body>
 </html>
