--- a/templates/login.html
+++ b/templates/login.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="auth-container">
-        <h2>Login</h2>
+        <h2>Вход</h2>
         <form action="{{ url_for('login') }}" method="post">
             <input type="text" name="username" placeholder="Username" required>
             <input type="password" name="password" placeholder="Password" required>
