--- a/templates/chat.html
+++ b/templates/chat.html
@@ -5,9 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chatbot</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <style>
+        body {
+            background: url("{{ url_for('static', filename='images/background.jpg') }}") repeat;
+            background-position: center;
+            background-size: 70%;
+        }
+    </style>
 </head>
 <body>
     <div class="chat-container">
+        <div class="logout">
+            <a href="{{ url_for('index') }}" class="oboudno">Вернуться</a>
+        </div>
         <div class="messages" id="messages">
             {% for message in messages %}
                 <div class="message">
@@ -17,16 +27,14 @@
         </div>
         <form id="message-form">
             <input type="text" id="message" name="message" placeholder="Message" required>
-            <button type="submit">Send</button>
+            <button type="submit">Отправить</button>
         </form>
     </div>
-    <button class="arrow-down-button">↓</button>
-    <a href="{{ url_for('index') }}">Вернуться к чатам</a>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.0/socket.io.js"></script>
     <script>
         const socket = io();
-        const chat_id = "{{ chat_id }}"; 
+        const chat_id = "{{ chat_id }}";
 
         document.getElementById('message-form').addEventListener('submit', function(event) {
             event.preventDefault();
@@ -42,6 +50,7 @@
                 newMessage.className = 'message';
                 newMessage.innerHTML = `<strong>${data.username}:</strong> ${data.message}`;
                 messagesContainer.appendChild(newMessage);
+                messagesContainer.scrollTop = messagesContainer.scrollHeight; 
             }
         });
     </script>
